# practice-nosql-db

./: .gitignore  README.md
1 single movie database/: CMakeLists.txt  CMakePresets.json  single movie database.cpp  single movie database.h
2 IPC movie database/client/: CMakeLists.txt  main.cpp  tunnel.cpp
2 IPC movie database/client/include/: tunnel.h
2 IPC movie database/server/: CMakePresets.json  main.cpp  tunnel.cpp
2 IPC movie database/server/include/: tunnel.h
3 SQL movie client/: CMakeLists.txt  compose.yaml  main.cpp
IPC movie database/client/: CMakeLists.txt  main.cpp  tunnel.cpp
IPC movie database/client/include/: tunnel.h
IPC movie database/server/: CMakeLists.txt  database.cpp  main.cpp  test.cpp  tunnel.cpp
IPC movie database/server/include/: database.h  tunnel.h
SQL movie client/: CMakeLists.txt  CMakePresets.json  main.cpp
single movie database/: CMakeLists.txt  single movie database.cpp  single movie database.h
